[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbo_isrs"
version = "0.1.0"
description = "Python implementation of ISRS and Rover POMDP/BMDP environments"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "seaborn",
    "pytest",
    "scikit-learn",
    "loguru",
    "tqdm"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing" 