[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rover_sbo"
version = "0.1.0"
description = "Rover environment for SBO"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "loguru",
    "torch",
    "gpytorch",
    "scikit-learn"
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["rover_sbo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/rover_sbo"] 